--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="false"
+        android:requestLegacyExternalStorage="true"
         android:theme="@style/Theme.CityLabAdmin"
         android:usesCleartextTraffic="true">
         <activity android:name=".MedicalInformation"></activity>
